--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <head>
-   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="HandheldFriendly" content="true"> 
+   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+   <meta name="HandheldFriendly" content="true">
+   
+   <title>Chris Lane| A Tribute Page</title>
+   <meta name="description" content="A Tribute page for Chris Lane by Dipen Patel"/>
+   <meta name="theme-color" content="#f0c46c"/>	
+  
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <main id="main">
